RESOLVED FIXED160118
[Coordinated Graphics] Lots of flaky tests
https://bugs.webkit.org/show_bug.cgi?id=160118
Summary [Coordinated Graphics] Lots of flaky tests
Carlos Garcia Campos
Reported 2016-07-23 07:09:42 PDT
Since the GTK+ ported to threaded compositor (coordinated graphics) there are a lot of flaky tests in the bots. In manu of the cases the diff shows a different size in the FrameView layer: -layer at (0,0) size 800x600 - RenderView at (0,0) size 800x600 -layer at (0,0) size 800x600 - RenderBlock {HTML} at (0,0) size 800x600 - RenderBody {BODY} at (8,8) size 784x584 - RenderBlock {H1} at (0,0) size 784x36 +layer at (0,0) size 400x474 + RenderView at (0,0) size 400x400 +layer at (0,0) size 400x474 + RenderBlock {HTML} at (0,0) size 400x475 + RenderBody {BODY} at (8,8) size 384x459 + RenderBlock {H1} at (0,0) size 384x36 This happens for tests run in the same WTR after fast/fixed-layout/fixed-layout.html. This is what happens: 1.- Test fast/fixed-layout/fixed-layout.html runs and sets fixed layout to true and fixed layout size to 400x400 2.- When it finishes TestController::resetStateToConsistentValues() is called. 3.- Blank URL is loaded after state has been updated 4.- Then Reset message is handled in the web process and Internals::resetToConsistentState() resets the fixed layout state and size. 5.- onresize happens and the handler set in fast/fixed-layout/fixed-layout.html is invoked setting the fixed layout to true and size to 400x400 again. 6.- about_blank is then loaded with the fixed layout enabled, as well as other tests after this one. In addition to this, coordinated graphics uses a fixedVisibleContentRect in ScrollView that is never reset.
Attachments
Patch (5.17 KB, patch)
2016-07-23 07:14 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2016-07-23 07:14:55 PDT
Michael Catanzaro
Comment 2 2016-07-23 07:50:19 PDT
Comment on attachment 284417 [details] Patch I think the iOS and macOS failures are unrelated to your change, r=me.
WebKit Commit Bot
Comment 3 2016-07-23 08:26:44 PDT
Comment on attachment 284417 [details] Patch Clearing flags on attachment: 284417 Committed r203644: <http://trac.webkit.org/changeset/203644>
WebKit Commit Bot
Comment 4 2016-07-23 08:26:48 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 5 2016-07-23 15:37:50 PDT
I think this change itself broke several tests.I'm going to choose to mark these against bug #160119 rather than this one to keep things simple, but the ones I think it broke are: fast/forms/select/select-painting.html fast/images/animated-png.html fast/images/background-position.html fast/forms/select/listbox-disabled-no-autoscroll.html
Note You need to log in before you can comment on or make changes to this bug.